Fixing wrapping the sentences

--- a/src/components/MessageTab/MessageTab.css
+++ b/src/components/MessageTab/MessageTab.css
@@ -1,6 +1,9 @@
 
 .messageSize {
     min-width: 10rem;
+    max-width: 30rem;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 .messageSize:hover {
